# Buy-Local-Campaign

./: .gitignore  README.md  consumer_data_cleaning.ipynb  consumer_data_enriching.ipynb  count_nulls.ipynb  get_uniques.ipynb  pyproject.toml  scratch_paper.ipynb  skip_reading.ipynb  transactions_location enrichment.ipynb  write_to_parquet.ipynb
scripts/: file_reader.py
